syntax = "proto3";

option optimize_for = LITE_RUNTIME;

import "google/protobuf/any.proto";

package commands;

message UnknownCommand {
  string unknownCommandTypeUrl = 1;
}

message ExecutionError {
  string message = 1;
  map<string, string> details = 2;
}

// Upper case the text provided in In, return Out
message UppercaseText {
  string text = 1;
}

// Lower case the text provided in In, return Out
message LowercaseText {
  string text = 1;
}